# Enterprise_Voice_Agent

./: .env.example  .gitignore  CHECKLIST.md  FILESTRUCT.md  README.md  frontend1.md  health_check.py  main.py  pyproject.toml  requirements.txt
configs/: __init__.py  logging_config.py  settings.py
data/: demo_orders.csv  routes.csv  vehicles.csv  warehouses.csv
data/knowledge_base/: company_policies.txt  faq.txt
front_new/: index.html
front_new/css/: style.css
front_new/js/: app.js
frontend/agent_dashboard/: dashboard.css  dashboard.html  dashboard.js
frontend/voice_client/: app.js  index.html  styles.css
scripts/: run_backend.sh  seed_database.py  start_backend.ps1  start_simulation.sh
src/voxops/: __init__.py
src/voxops/backend/: __init__.py  main.py
src/voxops/backend/api/: __init__.py  routes_agent.py  routes_orders.py  routes_simulation.py  routes_voice.py
src/voxops/backend/services/: __init__.py  agent_handoff.py  intent_parser.py  orchestrator.py  response_generator.py
src/voxops/database/: __init__.py  db.py  models.py  schema.sql  seed_data.py
src/voxops/rag/: __init__.py  document_loader.py  embedding_model.py  retriever.py  vector_store.py
src/voxops/simulation/: __init__.py  delivery_predictor.py  route_simulator.py  warehouse_simulator.py
src/voxops/utils/: __init__.py  helpers.py  llm_client.py  logger.py
src/voxops/voice/: __init__.py  audio_utils.py
src/voxops/voice/stt/: __init__.py  whisper_engine.py
tests/: test_api.py  test_phase7.py  test_rag.py  test_simulation.py  test_voice.py
(+2 files in other folders)
