[project]
name = "voxops-ai-gateway"
version = "0.1.0"
description = "Voice-Based AI Gateway with Logistics Simulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coqui-tts>=0.22.0",
    "fastapi>=0.115.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy==2.0.29",
    "sqlite-utils==3.36",
    "uvicorn>=0.29.0",
    "faster-whisper==1.0.3",
    "sounddevice==0.4.6",
    "pydub==0.25.1",
    "langchain==0.1.20",
    "langchain-community==0.0.38",
    "chromadb==0.4.24",
    "sentence-transformers==2.7.0",
    "simpy==4.1.1",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "loguru==0.7.2",
    "tqdm==4.66.2",
    "python-multipart==0.0.9",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "black==24.4.2",
    "ruff==0.4.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
